# cascade

./: .gitignore  .justfile  .rustfmt.toml  Cargo.toml  LICENSE  README.md
.github/workflows/: check-test-format.yaml  check.yaml  release.yaml
assets/lut/: compress-thugpro.ron
assets/saves/: 2414.SKA  80thugg.SKA  999.SKA  ClassicGreen.SKA  Cus.SKA  Custo111.SKA  Custom Ska.SKA  Custom11111.SKA  Custom111111111.SKA  Draco5.SKA  Draco55.SKA  Drago.tLT.SKA  Dragon.eXtLT.SKA  DreamY.SKA  Drizzteatthis.SKA  George.SKA  Ghostface.SKA  GhostsDraco.SKA  J1221.SKA  J3.SKA  JEHCPHUN3.SKA  Jaycee111111111.SKA  Jayceetekcolors.SKA  JehCPHUN.SKA  JoePro.SKA  KskoutLT.SKA  LilThotties.SKA  MYRAGE.SKA  Nacho6.SKA  Ned the Cyclops.SKA  Neon.SKA  afrojaycee.SKA  afrospideyy.SKA  alivegudephun.SKA  alivesunhat.SKA  allblackhellmet.SKA  astrovan.SKA  b2.SKA  bacelec.SKA  bacetltv2.SKA  (+98 more)
cascade/: Cargo.toml
cascade/src/: config.rs  crc32.rs  files.rs  lib.rs  lookup.rs  lut.rs  save.rs  symbol.rs
cascade/src/actions/: backup.rs  copy_trickset.rs  error.rs  mod.rs  set_trickset.rs
cascade/src/mutations/: error.rs  mod.rs  spec.rs  trickset.rs
cascade/src/qb/: error.rs  id.rs  kind.rs  structure.rs  symbol.rs  value.rs
cascade/src/save/: collection.rs  content.rs  entry.rs  error.rs  extension.rs  file.rs  mod.rs
cascade/src/save/thug_pro/: cas.rs  error.rs  mod.rs  ska.rs
cascade/src/structure/: error.rs  mod.rs  name_checksum.rs  structure.rs  symbol.rs  types.rs  value.rs
cascade/tests/: round_trip.rs
cascade/tests/common/: mod.rs
cascade_app/: Cargo.toml  build.rs
cascade_app/src/: app.rs  config.rs  dashboard.rs  fonts.rs  main.rs  paths.rs  screen.rs  tasks.rs  theme.rs  widget.rs
cascade_app/src/config/: mod.rs
cascade_app/src/screen/: dashboard.rs  options.rs
cascade_app/src/theme/: button.rs  checkbox.rs  mod.rs  scrollable.rs  slider.rs
cascade_app/src/widget/: entry.rs  mod.rs
cascade_cli/: Cargo.toml  build.rs
cascade_cli/src/: cli.rs  error.rs  main.rs
cascade_gui/: Cargo.toml
cascade_gui/src/: config.rs  error.rs  gui.rs  lib.rs  paths.rs  resources.rs  theming.rs
cascade_gui/src/actions/: copy_trickset.rs  mod.rs
cascade_gui/src/views/: dashboard.rs  mod.rs
cascade_gui/src/views/config/: mod.rs  paths.rs  theme.rs
crates/cascade-app/: Cargo.toml  build.rs
crates/cascade-app/src/: app.rs  dashboard.rs  fonts.rs  main.rs  paths.rs
crates/cascade-app/src/config/: frappe.rs  options.rs  selections.rs  theme.rs
crates/cascade-app/src/theme/: button.rs  checkbox.rs  container.rs  mod.rs  scrollable.rs  slider.rs  text.rs
crates/cascade-app/src/widget/: entry.rs  heading.rs
crates/cascade-cli/: Cargo.toml
crates/cascade-cli/src/: main.rs
crates/cascade-crc/: Cargo.toml
crates/cascade-dump/: Cargo.toml
crates/cascade-dump/src/: lib.rs
crates/cascade-lut/: Cargo.toml
crates/cascade-lut/src/: lib.rs
crates/cascade-qb/: Cargo.toml
crates/cascade-qb/src/: error.rs  id.rs  kind.rs  lib.rs  structure.rs  symbol.rs  value.rs
crates/cascade-save/: Cargo.toml
crates/cascade-save/src/: error.rs  lib.rs  save.rs
crates/cascade-thugpro/: Cargo.toml
crates/cascade-thugpro/src/: cas.rs  dump.rs  entry.rs  error.rs  id.rs  lib.rs  lut.rs  random.rs  save.rs  ska.rs
crates/cascade-thugpro/src/save/: entry.rs  extension.rs  mod.rs
crates/cascade-thugpro/tests/: round_trip.rs
crates/cascade-thugpro/tests/common/: mod.rs
resources/: compressed_lookup.yaml
resources/lut/: checksum.yaml  compressed16.yaml  compressed8.yaml  thug_pro.ron
resources/saves/: 4fantasy.SKA  AfroSpidey.SKA  Cust.SKA  Custom 123.SKA  Custom Skater1.SKA  Custom Skater11.SKA  Custom Skater12.SKA  Custom Skater13.SKA  Custom Skater15.SKA  Custom.SKA  Custom1.SKA  Custom111.SKA  Custom22222.SKA  Custom_Skater13.SKA  DraKcula.SKA  Draco.SKA  Draco05.SKA  Jaycee 24.SKA  Jayceehoodie.SKA  JoeProGreenLon2.SKA  JoeProPirate2.SKA  MyraGe.hOt._NM1.SKA  RegularScuba.SKA  SiltLT.SKA  TEKREMAKE.SKA  alivesunhat1.SKA  altblackhellmet.SKA  altskel.SKA  anderson cowboy.SKA  bace.SKA  bacetlv22.SKA  badacehood.SKA  bitch69.SKA  blu sunhat.SKA  blurnewog.SKA  c7pink.SKA  cdot2.SKA  cdot4.SKA  cdotcdot.SKA  cdotpink.SKA  (+57 more)
