[package]
name = "cascade"
version = "0.3.0-rc.1"
edition = "2021"

[dependencies]
byteorder = "1.4.3"
count-write = "0.1.0"
crc = "3.0.1"
filetime = "0.2.21"
indexmap = "2.5.0"
log = "0.4.17"
ron = "0.8.1"
serde = { version = "1.0.190", features = ["rc", "derive"] }
thiserror = "1.0.50"
toml = "0.8.6"
