[package]
name = "cascade_cli"
version = "0.2.0"
edition = "2021"
build = "build.rs"

[[bin]]
name = "cascade"
path = "src/main.rs"

[dependencies]
cascade = { path = "../cascade" }
cascade_gui = { path = "../cascade_gui" }

clap = { version = "4.2.7", features = ["derive", "cargo"] }
thiserror = "1.0.50"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1.12"
