[package]
name = "cascade_gui"
version = "0.2.0"
edition = "2021"

[dependencies]
cascade = { path = "../cascade" }

dark-light = "1.0.0"
directories = "5.0.1"
enum-iterator = "1.4.1"
fern = { version = "0.6.2", features = ["colored"] }
hex-literal = "0.4.1"
iced = { version = "0.10.0", default-features = false, features = ["lazy", "image"] }
iced_aw = { version = "0.7.0", default-features = false, features = ["icons"] }
log = "0.4.20"
rfd = "0.12.1"
serde = "1.0.193"
thiserror = "1.0.50"
time = { version = "0.3.30", features = ["local-offset", "formatting"] }
toml = "0.8.8"
